--- a/style.css
+++ b/style.css
@@ -1,27 +1,63 @@
 *{
-    margin: 0;
-    padding: 0;
+    margin: 0;padding: 0;
+}
+ul,li{ padding:0;margin:0;list-style:none;}
+body{
+    background-color: #f2f2f2;
+}
+.carousel{
+    height: 445px;
+    width: 940px;
+    margin: 0 auto;
+    margin-top: 200px;
+    border: 1px white solid;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
 }
 .w{
-    margin: 0 auto;
-    width: 400px;
+    width: 940px;
     height: 400px;
+    background-color: #fff;
     overflow: hidden;
+    
 }
-#i{
+.images{
+    display: flex;
+    transition: all 0.5s;
+}
+.buttons{
+    width: 940px;
+    height: 45px;
+    text-align: center;
+    
+}
+.buttons > ul > li {
+    height: 45px;
+    display:inline-block;
+    width: 60px;
+    border-left: 1px white solid;
     position: relative;
 }
-#i>img{
+.buttons > ul > li:nth-child(4){
+    border-right: 1px white solid;
+}
+.buttons > ul >li >img{
+    width: 32px;
+    height: 32px;
     position: absolute;
-    transition: all 1s;
+    top: 50%;
+    left: 50%;
+    margin: -16px 0 0 -16px;
 }
-.current{
-    left: 0;
-    z-index: 1;
+.act {
+    -webkit-box-shadow: inset 0px 0px 162px -46px rgba(0,0,0,0.75);
+    -moz-box-shadow: inset 0px 0px 162px -46px rgba(0,0,0,0.75);
+    box-shadow: inset 0px 0px 162px -46px rgba(0,0,0,0.75);
 }
-.enter{
-    left: 100%;
-}
-.leave{
-    left:-100%;
-}
+.ff {
+    width: 1px;
+    margin: 0 auto;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid white;
+    }
